[package]
name = "spotifyctl"
version = "0.1.0"
authors = ["Boris Faure <boris.faure@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.11", features = ["cli", "env-file", "client-reqwest", "reqwest-native-tls"]}
clap = "4"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
dirs = "5.0"
log = "0.4"
lovely_env_logger = "0.6"
