[package]
name = "spotifyctl"
version = "0.3.0"
authors = ["Boris Faure <boris.faure@gmail.com>"]
edition = "2021"
description = "A simple tool to control spotify from the command line."
repository = "https://github.com/borisfaure/spotifyctl"
license = "BSD-2-Clause"
categories = ["command-line-utilities", "multimedia::audio"]
keywords = ["spotify", "cli"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.12", features = ["cli", "env-file", "client-reqwest", "reqwest-native-tls"]}
clap = "4"
tokio = { version = "1.30", features = ["rt-multi-thread", "macros"] }
chrono = "0.4"
futures = "0.3"
dirs = "5.0"
log = "0.4"
lovely_env_logger = "0.6"
